# ph-esp32-mac

./: .gitignore  AGENTS.md  API.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DESIGN_old.md  DOCUMENTATION_STANDARDS.md  PUBLISHABILITY_ROADMAP.md  README.md  RELEASE.md  REORGANIZATION.md  SECURITY.md  TESTING.md  clippy.toml
.cargo/: config.toml
.github/workflows/: ci.yml  clippy.yml  coverage.yml
apps/: README.md
apps/examples/: Cargo.toml  README.md  embassy_net.rs  esp_hal_async.rs  esp_hal_integration.rs  smoltcp_echo.rs
apps/qa-runner/: Cargo.toml  README.md  build.rs  qa_runner.rs  rust-toolchain.toml
apps/qa-runner/tests/: framework.rs  group1_register.rs  group2_init.rs  group3_phy.rs  group4_emac.rs  group5_link.rs  group6_smoltcp.rs  group7_state.rs  group8_advanced.rs  group9_edge.rs  mod.rs
docs/: API.md  ARCHITECTURE.md  DESIGN.md  DOCUMENTATION_STANDARDS.md  README.md  ROADMAP.md  TESTING.md
examples/: Cargo.toml  README.md  bare_metal.rs  build.rs  embassy_net.rs  esp_hal_async.rs  esp_hal_integration.rs  rust-toolchain.toml  smoltcp_echo.rs
examples/.cargo/: config.toml
integration_tests/: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml  wt32_eth01.rs
integration_tests/.cargo/: config.toml
integration_tests/boards/: mod.rs  wt32_eth01.rs
integration_tests/tests/: framework.rs  group2_init.rs  group3_phy.rs  group9_edge.rs  mod.rs
scripts/: dev.ps1  dev.sh
src/: asynch.rs  config.rs  constants.rs  dma.rs  error.rs  esp_hal.rs  lib.rs  mac.rs  smoltcp.rs  sync.rs  sync_primitives.rs  test_utils.rs
src/boards/: mod.rs  wt32_eth01.rs
src/descriptor/: mod.rs  rx.rs  tx.rs
src/dma/: mod.rs
src/dma/descriptor/: mod.rs  rx.rs  tx.rs
src/driver/: config.rs  emac.rs  error.rs  filtering.rs  flow.rs  interrupt.rs  mac.rs  mod.rs
src/hal/: clock.rs  gpio.rs  mdio.rs  mod.rs  reset.rs
src/integration/: embassy_net.rs  esp_hal.rs  mod.rs  smoltcp.rs
src/internal/: constants.rs  descriptor_bits.rs  gpio_pins.rs  mod.rs
src/internal/dma/: engine.rs  mod.rs  ring.rs
src/internal/dma/descriptor/: bits.rs  mod.rs  rx.rs  tx.rs
src/internal/phy_regs/: lan8720a.rs  mod.rs  standard.rs
src/internal/register/: dma.rs  ext.rs  gpio.rs  mac.rs  mod.rs
src/phy/: generic.rs  lan8720a.rs  mod.rs
src/register/: dma.rs  ext.rs  mac.rs  mod.rs
src/sync/: asynch.rs  mod.rs  primitives.rs  shared.rs
src/testing/: mod.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
