[package]
name = "ph-esp32-mac-integration-tests"
version = "0.1.0"
edition = "2024"
authors = ["ph-esp32-mac contributors"]
description = "Integration tests for ph-esp32-mac on real ESP32 hardware"
publish = false
rust-version = "1.88"

[[bin]]
name = "wt32_eth01"
path = "wt32_eth01.rs"
test = false

[dependencies]
# The EMAC driver we're testing
ph-esp32-mac = { path = "..", features = ["esp32", "critical-section"] }

# ESP32 HAL and support crates
esp-hal = { version = "1.0", features = ["esp32", "unstable"] }
esp-bootloader-esp-idf = { version = "0.4", features = ["esp32"] }
esp-backtrace = { version = "0.18", features = ["esp32", "panic-handler", "println"] }
esp-println = { version = "0.16", features = ["esp32", "log-04"] }

# Logging
log = "0.4"

# Interrupt-safe access
critical-section = "1.2"

# =============================================================================
# Build Configuration for ESP32
# =============================================================================

[profile.release]
opt-level = "s"      # Optimize for size
lto = "thin"         # Link-time optimization
debug = true         # Keep debug info for panic messages

[profile.dev]
opt-level = 1        # Some optimization even in debug
debug = true
